fix: style clashing with dark mode root element

--- a/packages/core/components/SidebarSection/styles.module.css
+++ b/packages/core/components/SidebarSection/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   position: relative;
   flex-direction: column;
+  color: black;
 }
 
 .SidebarSection:last-of-type {
